--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,41 @@ dependencies:
   flutter:
     sdk: flutter
   # carousel_slider: ^5.0.0
-  cached_network_image: ^3.4.1
   another_flushbar: ^1.12.30
+  flutter_bloc: ^8.1.6
+  # Code generator (mainly used with cubit & retrofit)
+  freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
+  # Dependency injection
+  get_it: ^8.0.2
+  # Automatically generate code for converting to and from JSON by annotating Dart classes.
+  json_serializable: ^6.9.0
+  json_annotation: ^4.9.0
+  # Networking
+  dio: ^5.7.0
+  retrofit: ^4.4.1
+  retrofit_generator: ^9.1.5
+  pretty_dio_logger: ^1.4.0
+  # Local storage
+  shared_preferences: ^2.3.3
+  # Splash screen
+  flutter_native_splash: ^2.4.3
+  # SVG support
+  flutter_svg: ^2.0.16
+  # A flutter plugin for adapting screen and font size.Guaranteed to look good on different models - Responsive.
+  flutter_screenutil: ^5.9.3
+  # For handling network images
+  cached_network_image: ^3.4.1
+  # Flutter Secure Storage provides API to store data in secure storage.
+  flutter_secure_storage: ^9.2.2
+  # Bottom navigation bar
+  persistent_bottom_nav_bar: ^6.2.1
+  # Loading spinner.
+  flutter_spinkit: ^5.2.1
+  # Firebase services
+  firebase_core: ^3.9.0
+  # Lottie animations
+  lottie: ^3.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,6 +95,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -84,6 +118,9 @@ flutter:
     - family: Suwannaphum-Black
       fonts:
         - asset: assets/fonts/Suwannaphum-Black.ttf
+    - family: ClashDisplay-Variable
+      fonts:
+        - asset: assets/fonts/ClashDisplay-Variable.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
